2015-09-04  Chih-Hung Hsieh  <chh@google.com>

	* asm-tst1.c (main): Replace %Z length modifier with %z.
	* asm-tst2.c (main): Likewise.
	* asm-tst3.c (main): Likewise.
	* asm-tst4.c (main): Likewise.
	* asm-tst5.c (main): Likewise.
	* asm-tst6.c (main): Likewise.
	* asm-tst7.c (main): Likewise.
	* asm-tst8.c (main): Likewise.
	* asm-tst9.c (main): Likewise.
	* sectiondump.c (print_bytes): Likewise.

2015-08-14  Mark Wielaard  <mjw@redhat.com>

	* run-addr2line-alt-debugpath.sh: New test.
	* Makefile.am (TESTS): Add run-addr2line-alt-debugpath.sh
	(EXTRA_DIST): Likewise.

2015-07-29  Mark Wielaard  <mjw@redhat.com>

	* run-unstrip-test3.sh: New test.
	* testfile-info-link.bz2: New file.
	* testfile-info-link.debuginfo.bz2: Likewise.
	* testfile-info-link.stripped.bz2: Likewise.
	* Makefile.am (TESTS): Add run-unstrip-test3.sh.
	(EXTRA_DIST): Add run-unstrip-test3.sh, testfile-info-link.bz2,
	testfile-info-link.debuginfo.bz2, testfile-info-link.stripped.bz2.

2015-06-27  Pino Toscano  <toscano.pino@tiscali.it>

	* tests/run-deleted.sh: Skip when detecting a not implemented
	dwfl_linux_proc_attach.

2015-06-27  Pino Toscano  <toscano.pino@tiscali.it>

	* tests/dwfl-bug-fd-leak.c (elfutils_open): Check for null results of
	dwfl_addrmodule.

2015-06-26  Pino Toscano  <toscano.pino@tiscali.it>

	* tests/vdsosyms.c [!__linux__] (main): Mark argv as unused.

2015-06-26  Pino Toscano  <toscano.pino@tiscali.it>

	* tests/backtrace-data.c: Reduce scope of some includes to match their
	usage.
	* tests/backtrace.c: Likewise.
	* tests/deleted.c: Likewise.

2015-06-16  Mark Wielaard  <mjw@redhat.com>

	* run-strip-test.sh: Add strip-in-place (eu-strip without -o) test
	for non-ET_REL files.

2015-05-30  Mark Wielaard  <mjw@redhat.com>

	* backtrace-subr.sh (check_native_core): Notice core file couldn't be
	generated before skipping.
	* run-addr2line-i-demangle-test.sh: Notice demangler is unsupported
	before skipping.
	* run-backtrace-demangle.sh: Likewise.